--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: tparking
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,14 +55,13 @@ dependencies:
   timezone: ^0.9.2
   image_picker: ^1.0.4
   dropdown_search: ^5.0.6
-  #shared_preferences: ^2.2.1
+  shared_preferences: ^2.2.1
   flutter_staggered_animations: ^1.1.1
   email_validator: ^2.1.17
   animations: ^2.0.8
   location: ^5.0.3
   #device_preview: ^1.1.0
   #intl: ^0.18.1
-  
 
 dev_dependencies:
   flutter_test:
@@ -80,17 +78,16 @@ flutter_icons:
   android: true
   image_path: "assets/logo/logo.png"
 flutter_native_splash:
-  color: '#f7f6f1'
-  color_dark: '#272727'
+  color: "#f7f6f1"
+  color_dark: "#272727"
   image: "assets/logo/Welcome_Logo.png"
   image_dark: "assets/logo/Welcome_Logo.png"
- 
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -98,9 +95,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/
-   - assets/logo/
-   - assets/animation/
+    - assets/images/
+    - assets/logo/
+    - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
